[tool.poetry]
name = "v2img"
version = "0.1.0"
description = ""
authors = ["Kota Aono <k.pg.aono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "4.58.0"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pyqt5-tools = "5.15.1.1.7.5"
pytest = "6.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
